# V.A.S.P

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  test_crossref.py
.claude/: reviewagent-agent-design.md
.claude/agents/: agent-prompt-specialist.md  phase1-poc-implementer.md  phase2-mvp-implementer.md  reviewagent-project-architect.md  schema-connector-specialist.md  scope-guard-reviewer.md  test-eval-specialist.md
.claude/project/: agent-design-reference.md  architecture.md  current-state.md  layers.md  overview.md  phase1-scope.md  phase2-scope.md  phases.md  roadmap.md  workflows.md
.claude/skills/add-agent/: SKILL.md
.claude/skills/add-api-endpoint/: SKILL.md
.claude/skills/add-connector/: SKILL.md
.claude/skills/phase1-backend-implementation/: SKILL.md
.claude/skills/phase2-mvp-implementation/: SKILL.md
.claude/skills/run-phase1-task/: SKILL.md
.claude/skills/run-phase2-task/: SKILL.md
.claude/skills/update-project-context/: SKILL.md
DOCUMENT/: everything.txt  implementation_plan.md  pdf_content.txt  phase1_guide.md  phase1_poc_backend_ai_file_matrix.md  phase1_poc_backend_ai_step_by_step_prompts.md  phase1_poc_backend_ai_testing_guide.md  phase2_backend_ai_full_pipeline_file_plan.md  phase2_guide.md  phase3_guide.md
docker/: docker-compose.yml
scripts/: eval.py  migrate.py
src/reviewagent/: config.py
src/reviewagent/agents/: aggregator_agent.py  (+7 more)
tests/: conftest.py
tests/integration/: test_review_pipeline.py
tests/unit/: test_agents.py  test_connectors.py  test_eval.py  test_schemas.py  test_snapshots.py
(+39 files in other folders)
