[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "reviewagent-ptit"
version = "0.1.0"
description = "Phase 1 PoC backend and AI services for ReviewAgent PTIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "pydantic>=2.9.0,<3.0.0",
  "pydantic-settings>=2.5.0,<3.0.0",
  "sqlalchemy>=2.0.35,<3.0.0",
  "asyncpg>=0.29.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
  "mypy>=1.11.0,<2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/reviewagent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = []
